--- a/client/index.html
+++ b/client/index.html
@@ -15,18 +15,18 @@
 <body>
     <div id="steps" class="details">All Players Info:
         <div id="TCRSteps">TCR steps: 1000/1000</div>
-        <div id="LXRSteps">LOK steps:</div>
-        <div id="LKSteps">KSY steps:</div>
-        <div id="JHASteps">KN steps:</div>
-        <div id="JVSteps">JT steps:</div>
-        <div id="JLSteps">CJH steps:</div>
-        <div id="SZFSteps">LSH steps:</div>
-        <div id="HSteps">KX steps:</div>
-        <div id="CJHSteps">TJY steps:</div>
-        <div id="KXSteps">TJY steps:</div>
+        <div id="LOKSteps">LOK steps:</div>
+        <div id="KSYSteps">KSY steps:</div>
+        <div id="KNSteps">KN steps:</div>
+        <div id="JTSteps">JT steps:</div>
+        <div id="CJHSteps">CJH steps:</div>
+        <div id="LSHSteps">LSH steps:</div>
+        <div id="KXSteps">KX steps:</div>
+        <div id="TJYSteps">TJY steps:</div>
+        <div id="CEDSteps">TJY steps:</div>
         <hr>
-        <div>Team A: LK, LXR, JHA</div>
-        <div>Team B: JV, JL, SZF, CJH</div>
+        <div>Team A: LOK, CED, JT</div>
+        <div>Team B: TJY, KSY</div>
     </div>
     
     <div id="chat" class="chat">
